[gd_scene load_steps=2 format=3 uid="uid://bkvduy6ptcw7t"]

[ext_resource type="Script" path="res://multiplayer/Client.gd" id="1_nhgw0"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nhgw0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.2
anchor_right = 0.6
anchor_bottom = 0.2
offset_left = -0.200012
offset_top = 0.399994
offset_right = 314.8
offset_bottom = 163.4

[node name="UserAccount" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 30.0
offset_top = 40.0
offset_right = 138.0
offset_bottom = 63.0
text = "User Account:"

[node name="UserAccountText" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 165.0
offset_top = 40.0
offset_right = 273.0
offset_bottom = 63.0
text = "user account"

[node name="DisplayName" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 30.0
offset_top = 90.0
offset_right = 142.0
offset_bottom = 113.0
text = "Display Name:"

[node name="DisplayNameText" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 165.0
offset_top = 90.0
offset_right = 273.0
offset_bottom = 113.0
text = "user account"

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2
offset_left = -1.40001
offset_top = -0.600006
offset_right = 311.6
offset_bottom = 162.4

[node name="Label" type="Label" parent="Panel2"]
layout_mode = 0
offset_left = 13.632
offset_top = 17.552
offset_right = 65.632
offset_bottom = 40.552
text = "Email: "

[node name="Label2" type="Label" parent="Panel2"]
layout_mode = 0
offset_left = 13.0
offset_top = 56.0
offset_right = 85.0
offset_bottom = 79.0
text = "Pasword:
"

[node name="EmailInput" type="LineEdit" parent="Panel2"]
layout_mode = 0
offset_left = 92.0
offset_top = 14.0
offset_right = 292.0
offset_bottom = 45.0
text = "test@gmail.com"

[node name="PasswordInput" type="LineEdit" parent="Panel2"]
layout_mode = 0
offset_left = 90.0
offset_top = 51.0
offset_right = 290.0
offset_bottom = 82.0
text = "password"

[node name="Login" type="Button" parent="Panel2"]
layout_mode = 0
offset_left = 176.0
offset_top = 101.0
offset_right = 289.0
offset_bottom = 141.0
text = "Submit"

[node name="DataPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.243
anchor_top = 0.557
anchor_right = 0.243
anchor_bottom = 0.557
offset_left = 0.0639954
offset_top = 0.0639648
offset_right = 202.064
offset_bottom = 112.064

[node name="StoreDataButton" type="Button" parent="DataPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 14.0
offset_right = 182.0
offset_bottom = 45.0
text = "Store Data"

[node name="GetDataButton" type="Button" parent="DataPanel"]
layout_mode = 0
offset_left = 19.0
offset_top = 58.0
offset_right = 161.0
offset_bottom = 89.0
text = "Get Data from Store"

[node name="Panel3" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.009
anchor_top = 0.546
anchor_right = 0.009
anchor_bottom = 0.546
offset_left = -0.368001
offset_top = 1.19199
offset_right = 254.632
offset_bottom = 170.192

[node name="JoinCreate" type="Button" parent="Panel3"]
layout_mode = 0
offset_left = 124.0
offset_top = 76.0
offset_right = 219.0
offset_bottom = 107.0
text = "Join/Create"

[node name="Matchmaking" type="Button" parent="Panel3"]
layout_mode = 0
offset_left = 55.0
offset_top = 123.0
offset_right = 207.0
offset_bottom = 154.0
text = "StartMatchmaking"

[node name="Ping" type="Button" parent="Panel3"]
layout_mode = 0
offset_left = 33.0
offset_top = 75.0
offset_right = 94.0
offset_bottom = 106.0
text = "Ping"

[node name="Label" type="Label" parent="Panel3"]
layout_mode = 0
offset_left = 3.0
offset_top = 20.0
offset_right = 43.0
offset_bottom = 43.0
text = "Name of 
Match"

[node name="MatchName" type="LineEdit" parent="Panel3"]
layout_mode = 0
offset_left = 86.0
offset_top = 30.0
offset_right = 228.0
offset_bottom = 61.0

[node name="Ready" type="Button" parent="Panel3"]
layout_mode = 0
offset_left = 556.0
offset_top = 110.0
offset_right = 726.0
offset_bottom = 174.0
text = "READY"

[connection signal="button_down" from="Panel2/Login" to="." method="_on_login_button_down"]
[connection signal="button_down" from="DataPanel/StoreDataButton" to="." method="_on_store_data_button_button_down"]
[connection signal="button_down" from="DataPanel/GetDataButton" to="." method="_on_get_data_button_button_down"]
[connection signal="button_down" from="Panel3/JoinCreate" to="." method="_on_join_create_button_down"]
[connection signal="button_down" from="Panel3/Matchmaking" to="." method="_on_matchmaking_button_down"]
[connection signal="button_down" from="Panel3/Ping" to="." method="_on_ping_button_down"]
[connection signal="button_down" from="Panel3/Ready" to="." method="_on_ready_button_down"]
